--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.js" integrity="sha512-j+F4W//4Pu39at5I8HC8q2l1BNz4OF3ju39HyWeqKQagW6ww3ZF9gFcu8rzUbyTDY7gEo/vqqzGte0UPpo65QQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-        <title>Freelancing</title>
+        <title>Nyari Kerja</title>
     </head>
   
     <body>
