--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="container-fluid px-lg-5">
                     <nav class="navbar navbar-expand-lg my-navbar">
                         <a class="navbar-brand" href="#"><span class="logo">
-                            <img src=" " class="img-fluid" style="width:30px; margin:-3px 0px 0px 0px;">Freelancing</span>
+                            <img src="" class="img-fluid" style="width:30px; margin:-3px 0px 0px 0px;">Freelancing</span>
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"><i class="fas fa-bars" style="margin:5px 0px 0px 0px;"></i></span>
@@ -99,8 +99,8 @@
                         <div class="banner-con text-center">
                             <p class="first-title">Hire the best freelancers for any job, online.</p>
                             <p class="banner-des">Millions of people use freelancer.com to turn their ideas into reality.</p>
-                            <a href="login.html" target="_blank" class="banner-btn">Find Jobs</a>
-                            <a href="login.html" target="_blank" class="banner-btn">Hire a Freelancers</a>
+                            <a href="findjobs.html" target="_blank" class="banner-btn">Find Jobs</a>
+                            <a href="findfreelancers.html" target="_blank" class="banner-btn">Hire a Freelancers</a>
                         </div>
                     </div>
                 </div>
