--- a/loginpage.html
+++ b/loginpage.html
@@ -15,10 +15,10 @@
 				<button type="button" class="toggle-btn" onclick="signup()">Sign up</button>
 			</div>
 			<div class="social-icons">
-			<img src="img/login/googlelogo.png">
-			<img src="img/login/instagramlogo.png">
-			<img src="img/login/fblogo.png">
-			<img src="img/login/twitterlogo.png">
+			<a href="https://www.google.com"><img src="img/login/google.png"></a>
+			<a href="https://www.instagram.com"><img src="img/login/instagram.png"></a>
+			<a href="https://www.facebook.com"><img src="img/login/facebook.png"></a>
+			<a href="https://www.twitter.com"><img src="img/login/twitter.png"></a>
 			</div>
 
 			<form id="login" class="input-group">
