--- a/loginpage.html
+++ b/loginpage.html
@@ -14,13 +14,14 @@
 				<button type="button" class="toggle-btn" onclick="login()">Sign In</button>
 				<button type="button" class="toggle-btn" onclick="signup()">Sign up</button>
 			</div>
+			<div class="social-icons"><p>Or login with</p></div>
 			<div class="social-icons">
-			<a href="https://www.google.com"><img src="img/login/google.png"></a>
-			<a href="https://www.instagram.com"><img src="img/login/instagram.png"></a>
-			<a href="https://www.facebook.com"><img src="img/login/facebook.png"></a>
-			<a href="https://www.twitter.com"><img src="img/login/twitter.png"></a>
+				<a href="https://accounts.google.com"><img src="img/login/google.png"></a>
+				<a href="https://www.instagram.com"><img src="img/login/instagram.png"></a>
+				<a href="https://www.facebook.com"><img src="img/login/facebook.png"></a>
+				<a href="https://www.twitter.com"><img src="img/login/twitter.png"></a>
 			</div>
-
+			<br>
 			<form id="login" class="input-group">
 				<input type="text" class="input-field" placeholder="Email or Username" required>
 				<input type="password" class="input-field" placeholder="Password" required>
