--- a/loginpage.html
+++ b/loginpage.html
@@ -17,9 +17,9 @@
 			<div class="social-icons"><p>Or login with</p></div>
 			<div class="social-icons">
 				<a href="https://accounts.google.com"><img src="img/login/google.png"></a>
-				<a href="https://www.instagram.com"><img src="img/login/instagram.png"></a>
-				<a href="https://www.facebook.com"><img src="img/login/facebook.png"></a>
-				<a href="https://www.twitter.com"><img src="img/login/twitter.png"></a>
+				<a href="https://www.instagram.com/login"><img src="img/login/instagram.png"></a>
+				<a href="https://id-id.facebook.com/login"><img src="img/login/facebook.png"></a>
+				<a href="https://www.twitter.com/login"><img src="img/login/twitter.png"></a>
 			</div>
 			<br>
 			<form id="login" class="input-group">
