--- a/findfreelancers.html
+++ b/findfreelancers.html
@@ -1,8 +1,32 @@
-<html>
-    <head>
-        <title>Hire Freelancers</title>
-    </head>
-    <body>
-        
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hire Freelancer</title>
+    <link rel="stylesheet" href="freelancerstyle.css">
+</head>
+<body>
+    <div class="wrapper">
+        <h2>contact us</h2>
+
+        <form action="" method="post">
+            <div class="form-group">
+                <label for="">Choose a name for your project</label>
+                <input type="text"
+                placeholder="ex. Build me a website">
+            </div>
+            <div class="form-group">
+                <label for="">Tell us more about your project</label>
+                <textarea name="" id="" rows="5" placeholder="Describe your project here..."></textarea>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="submit">Submit</button>
+            </div>
+        </form>
+
+    </div>
+    
+</body>
 </html>
