--- a/findjobs.html
+++ b/findjobs.html
@@ -73,8 +73,8 @@
 
         <div class="container-fluid">
             <div class="row d-flex justify-content-center">
-                <div class="col" style="margin-left: 80px;">
-                    <div class="wrapper border">
+                <div class="border-right col-md">
+                    <div>
                         <header>
                             <h3>Budget</h3>
                             <input type="checkbox" id="job" name="job" value="fixedprice">
@@ -156,7 +156,7 @@
                             <input type="range" class="range-max" min="0" max="10000" value="7500" step="100">
                         </div>
                     </div>
-                    <br><div class="wrapper border">
+                    <br><div>
                         <div class="border-bottom">
                             <h3>Type</h3>
                             <input type="checkbox" id="typejob" name="local" value="local">
@@ -219,7 +219,7 @@
                     </div>
                 </div>
     
-                <div class="wrapper col-md-8 border">
+                <div class="col-md-10">
                     <div class="row">
                         <div class="col-md-9 border-bottom">
                             <h2>Heading</h2>
