--- a/findjobs.html
+++ b/findjobs.html
@@ -72,7 +72,7 @@
         <br>
 
         <div class="container-fluid">
-            <div class="row d-flex justify-content-center">
+            <div class="row d-flex justify-content-center" style="margin: 20px;">
                 <div class="border-right col-md">
                     <div>
                         <header>
