--- a/findjobs.html
+++ b/findjobs.html
@@ -177,135 +177,135 @@
                     </div>
                 </div>
     
-                <div class="col-md-10">
+               <div class="col-md-10">
                     <div class="row">
                         <div class="col-md-9 border-bottom">
-                            <h2>Heading</h2>
-                            <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+                            <h2>Logo Design</h2>
+                            <p>Hello, we are looking for creative graphic designer for make a Fried Chicken Master logo. We hope you can make an attractive logo and cool logo.</p>
                         </div>
                         <div class="col border-bottom">
-                            <h2>Heading</h2>
+                            <h4>$10-$30</h4>
                             <br>
                             <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
-                            <h2>Heading</h2>
-                            <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+                            <h2>Website Design and development</h2>
+                            <p>Join a talented and motivated team to develop and design a high-end website based.</p>
                         </div>
                         <div class="col border-bottom">
-                            <h2>Heading</h2>
+                            <h4>$30-$40/Hour</h4>
                             <br>
                             <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
-                            <h2>Heading</h2>
-                            <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+                            <h2>Product Package Design</h2>
+                            <p>I need to create a product label and package design. Our product is a potato snack. It's a new product launch</p>
                         </div>
                         <div class="col border-bottom">
-                            <h2>Heading</h2>
+                            <h4>$70</h4>
                             <br>
                             <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
-                            <h2>Heading</h2>
-                            <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+                            <h2>Mobile App (Android and IOS)</h2>
+                            <p>When user install our app should upload the mobile number of user, name of contacts available in his/her mobile and respective mobile number of such contacts. Every user of app should be identified by an unique ID and the contacts should be updated when a new contact is added or a contact is edited. The app should be free from any bugs/crashing issues.</p>
                         </div>
                         <div class="col border-bottom">
-                            <h2>Heading</h2>
+                            <h4>$10-$20/Hour</h4>
                             <br>
                             <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
-                            <h2>Heading</h2>
-                            <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+                            <h2>Instagram and Canva Designer</h2>
+                            <p>Seeking a graphic designer who can work on Instagram and Canva projects.</p>
                         </div>
                         <div class="col border-bottom">
-                            <h2>Heading</h2>
+                            <h4>$7/Hour</h4>
                             <br>
                             <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
-                            <h2>Heading</h2>
-                            <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+                            <h2>PHP Developer to build our backend and frontend Project</h2>
+                            <p>Hi, we are seeking an experienced, reliable and trustworthy php full stack developer to craft the backend part of our website and make it all work great. We have written a project brief document to help better explain our project and what you will be responsible for in the backed. But we will build the frontend pages + landing pages and supply you with a complete backend admin template we are buying which is built using Bootstrap 5 Framework, HTML5, CSS and JQuery. So we need an experienced developer to build our platform backend from scratch.</p>
                         </div>
                         <div class="col border-bottom">
-                            <h2>Heading</h2>
+                            <h4>$1500</h4>
                             <br>
                             <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
-                            <h2>Heading</h2>
-                            <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+                            <h2>Illustrator for Corporate HR Cartoon Art</h2>
+                            <p>Create illustrations from photo and clip art for Corporate Story Boards. 35 image, each image will be 5" wide x 4" high. Style: Corporate cartoon art with anime influence. Reference is 7 pictures for one of the storyboards</p>
                         </div>
                         <div class="col border-bottom">
-                            <h2>Heading</h2>
+                            <h4>$1900</h4>
                             <br>
                             <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
-                            <h2>Heading</h2>
-                            <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+                            <h2>Help fix wordpresss many problems, need it now!</h2>
+                            <p>wordpress failed when reverting back ups, wordpress theme and woo commerce not working properly with gz files and front end problem, wordpress website is slow and image not showing properly. I want someone who is quick , problem oriented, fix and next attitude. Need to work now.</p>
                         </div>
                         <div class="col border-bottom">
-                            <h2>Heading</h2>
+                            <h4>$15/Hour</h4>
                             <br>
                             <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
-                            <h2>Heading</h2>
-                            <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+                            <h2>3D hi-res movie title for Logo with sound</h2>
+                            <p>I have a logo which I wanna make a 3D hi-res movie title for Logo with sound. I will provide u with the 2D AI file. Please send me your past portfolio. I want impactful sound with a bang.</p>
                         </div>
                         <div class="col border-bottom">
-                            <h2>Heading</h2>
+                            <h4>$75</h4>
                             <br>
                             <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
-                            <h2>Heading</h2>
-                            <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+                            <h2>Book cover and logo design.</h2>
+                            <p>I need some freelancers that can design some book cover with our company name on it with logo.</p>
                         </div>
                         <div class="col border-bottom">
-                            <h2>Heading</h2>
+                            <h4>$17/Hour</h4>
                             <br>
                             <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
-                            <h2>Heading</h2>
-                            <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+                            <h2>Unity mobile game Paytm payment gateway (Pay-in and pay-outs)</h2>
+                            <p>Need someone who can add pay in pay outs for a unity game (android). People should be able to add money to game using paytm wallet and people should be able to withdraw money from game wallet. (withdrawl process should be automatic)</p>
                         </div>
                         <div class="col border-bottom">
-                            <h2>Heading</h2>
+                            <h4>$80</h4>
                             <br>
                             <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9">
-                            <h2>Heading</h2>
-                            <p>Will you do the same for me? It's time to face the music I'm no longer your muse. Heard it's beautiful, be the judge and my girls gonna take a vote. I can feel a phoenix inside of me. Heaven is jealous of our love, angels are crying from up above. Yeah, you take me to utopia.</p>
+                            <h2>Illustrator Needed!</h2>
+                            <p>We need the service of an artist or illustrator/cartoonist/animator to work on a project for an upcoming children workshop, I'll give the idea of what I need to be illustrated/drawn for printed material and social content. Please get back to me for more details.</p>
                         </div>
                         <div class="col">
-                            <h2>Heading</h2>
+                            <h4>$8420</h4>
                             <br>
                             <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
                         </div>
