--- a/findjobs.html
+++ b/findjobs.html
@@ -311,7 +311,42 @@
                             <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
                         </div>
                     </div>
-
+                   <br><div class="row">
+                        <div class="col-md-9 border-bottom">
+                            <h2>Simple React frontend with placeholders</h2>
+                            <p>Looking to have somebody build out a very simple 3 page react frontend that uses the React hooks and contexts, react Router for navigation, firebase sdk for basic login/logout auth. The attached pdf file provides a basic mockup that shows the three pages being requested.</p>
+                        </div>
+                        <div class="col">
+                            <h4>$400</h4>
+                            <br>
+                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                        </div>
+                    </div>
+                    <br><div class="row">
+                        <div class="col-md-9 border-bottom">
+                            <h2>Graphic Designer for Social Media Posts</h2>
+                            <p>Freelancing is looking for a Graphic Designer to design their social media posts. As a Graphic Designer you will be responsible for understanding the requirements and design briefs and deliver high-quality graphics. If you're a tech-savvy professional with interest in the latest trends in digital technologies, team Freelancing would like to meet you. Key accountabilities:
+                                • Designing social media (LinkedIn, Facebook, Instagram, Twitter) posts (12 posts in a month)
+                                • High-quality and attention-grabbing images that grab the users attention and improving the brands credibility
+                                • Visually compelling infographics that present valuable information about the company in a compelling way</p>
+                        </div>
+                        <div class="col">
+                            <h4>$100</h4>
+                            <br>
+                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                        </div>
+                    </div>
+                    <br><div class="row">
+                        <div class="col-md-9 border-bottom">
+                            <h2>Cars logo for my new bussiness</h2>
+                            <p>I have a new bussiness and i'm looking for a creative logo designer for make a cars logo for me</p>
+                        </div>
+                        <div class="col">
+                            <h4>$40-$50</h4>
+                            <br>
+                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
