--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             <div class="card mb-4 shadow-sm">
                                 <div class="image">
                                     <img class="image__img" src="img/jobs/logo design.jpg" class="d-block w-100" style="max-width: 100%;"></img>
-                                    <a class="image__overlay" href="">
+                                    <a class="image__overlay" href="logodesign.html">
                                         <button type="button" class="btn btn-light">MORE INFO</button>
                                     </a>
                                 </div>
