--- a/findjobs.html
+++ b/findjobs.html
@@ -182,34 +182,34 @@
                     <div class="row">
                         <div class="col-md-9 border-bottom">
                             <h2>Logo Design</h2>
-                            <p>Hello, we are looking for creative graphic designer for make a Fried Chicken Master logo. We hope you can make an attractive logo and cool logo.</p>
+                            <p>This logo is for a software service called "Parent solution" or shortly "PSol" the main goal of this service is to help parents in controlling what theire childrent (students) are doing at school. This is a remote control, the parents get messages instantly via veriouse channel (SMS, WhatsApp, Email, ...) when theire child miss a course or get an evaluation results.</p>
                         </div>
                         <div class="col border-bottom">
                             <h4>$10-$30</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
                             <h2>Website Design and development</h2>
-                            <p>Join a talented and motivated team to develop and design a high-end website based.</p>
+                            <p>Join a talented and motivated team to develop and design a high-end website based. We need a custom website designed and developed from scratch. We will provide you the brand assets and website copy. We need five pages website (Home, about us, pricing, services, and contact) with some pop ups. We need a custom website designed in XD, figma or angular backend developed in php. We are not building it in CMS because we plan to create web application later on. The package should include unlimited number of revisions with ongoing support after project and the project should be completed in 15-20 days. Send me your offer with portfolio and we will move forward and discuss it further. Thanks</p>
                         </div>
                         <div class="col border-bottom">
                             <h4>$30-$40/Hour</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
                             <h2>Product Package Design</h2>
-                            <p>I need to create a product label and package design. Our product is a potato snack. It's a new product launch</p>
+                            <p>I need to create a product label and package design. Our product is a potato snack with many flavour. It's a new product launch which is the best flavour that our product made and I hope someone can make the package as interesting as the taste.</p>
                         </div>
                         <div class="col border-bottom">
                             <h4>$70</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -220,18 +220,18 @@
                         <div class="col border-bottom">
                             <h4>$10-$20/Hour</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
                             <h2>Instagram and Canva Designer</h2>
-                            <p>Seeking a graphic designer who can work on Instagram and Canva projects.</p>
+                            <p>Seeking a graphic designer who can work on Instagram and Canva projects. We are currently rebranding with new social media pages so basically starting from scratch. I have attached some ideas around what our initial requirements are then a list of ideas for posts in future.</p>
                         </div>
                         <div class="col border-bottom">
                             <h4>$7/Hour</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -242,7 +242,7 @@
                         <div class="col border-bottom">
                             <h4>$1500</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -253,7 +253,7 @@
                         <div class="col border-bottom">
                             <h4>$1900</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -264,7 +264,7 @@
                         <div class="col border-bottom">
                             <h4>$15/Hour</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -275,18 +275,18 @@
                         <div class="col border-bottom">
                             <h4>$75</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
-                            <h2>Book cover and logo design.</h2>
-                            <p>I need some freelancers that can design some book cover with our company name on it with logo.</p>
+                            <h2>Children's Book Author</h2>
+                            <p>I am looking for a creative writer to help me write a short story - biography form for my future child. Both of my parents have passed away unexpectedly and instead of waiting until they are older to tell them about their Grandparents, I would like to start when they are young by reading to them.</p>
                         </div>
                         <div class="col border-bottom">
                             <h4>$17/Hour</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -297,18 +297,18 @@
                         <div class="col border-bottom">
                             <h4>$80</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
-                        <div class="col-md-9">
+                        <div class="col-md-9 border-bottom">
                             <h2>Illustrator Needed!</h2>
                             <p>We need the service of an artist or illustrator/cartoonist/animator to work on a project for an upcoming children workshop, I'll give the idea of what I need to be illustrated/drawn for printed material and social content. Please get back to me for more details.</p>
                         </div>
-                        <div class="col">
+                        <div class="col border-bottom">
                             <h4>$8420</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                    <br><div class="row">
@@ -316,35 +316,32 @@
                             <h2>Simple React frontend with placeholders</h2>
                             <p>Looking to have somebody build out a very simple 3 page react frontend that uses the React hooks and contexts, react Router for navigation, firebase sdk for basic login/logout auth. The attached pdf file provides a basic mockup that shows the three pages being requested.</p>
                         </div>
-                        <div class="col">
+                        <div class="col border-bottom">
                             <h4>$400</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
                             <h2>Graphic Designer for Social Media Posts</h2>
-                            <p>Freelancing is looking for a Graphic Designer to design their social media posts. As a Graphic Designer you will be responsible for understanding the requirements and design briefs and deliver high-quality graphics. If you're a tech-savvy professional with interest in the latest trends in digital technologies, team Freelancing would like to meet you. Key accountabilities:
-                                • Designing social media (LinkedIn, Facebook, Instagram, Twitter) posts (12 posts in a month)
-                                • High-quality and attention-grabbing images that grab the users attention and improving the brands credibility
-                                • Visually compelling infographics that present valuable information about the company in a compelling way</p>
+                            <p>Freelancing is looking for a Graphic Designer to design their social media posts. As a Graphic Designer you will be responsible for understanding the requirements and design briefs and deliver high-quality graphics. If you're a tech-savvy professional with interest in the latest trends in digital technologies, team Freelancing would like to meet you. </p>
                         </div>
-                        <div class="col">
+                        <div class="col border-bottom">
                             <h4>$100</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
                         <div class="col-md-9 border-bottom">
-                            <h2>Cars logo for my new bussiness</h2>
-                            <p>I have a new bussiness and i'm looking for a creative logo designer for make a cars logo for me</p>
+                            <h2>Business card design</h2>
+                            <p>To make a business card design for a new business. The name of the company is Dura Inc, featured in developing Ai pillow and other Ai Home Furnishing products. The design should be creative, technical, stylish, fresh, innovative.</p>
                         </div>
-                        <div class="col">
+                        <div class="col border-bottom">
                             <h4>$40-$50</h4>
                             <br>
-                            <button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button>
+                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                 </div>
